2007-08-25  Rodney Dawes  <dobey.pwns@gmail.com>

	* src/preferences.c (create_prefs_dialog):
	Add mnemonics to a few labels, and set mnemonic widget if needed

	* src/ui.c (group_type_label[3]):
	Add mnemonics to the type labels, for the preferences dialog

	Fixes #466695

2007-08-25  Rodney Dawes  <dobey.pwns@gmail.com>

	* src/Makefile.am:
	* src/ghex-window.c (ghex_window_new):
	Pass PREFIX in to bonobo_ui_util_set_ui so that we can load the
	ui xml from the appropriate prefix

	Fixes #467384

2007-08-13  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in: Update version to 2.19.90 for release

2007-08-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* src/hex-document.h: add G_BEGIN/END_DECLS around public declarations
	so that it can be easily included in C++ applications

2007-08-09  Rodney Dawes  <dobey.pwns@gmail.com>

	* src/gtkhex.c (gtk_hex_key_press):
	Handle keypad presses appropriately when numlock is on/off

	Fixes #464979

2007-08-08  Rodney Dawes  <dobey.pwns@gmail.com>

	* src/gtkhex.c (gtk_hex_insert_autohilight):
	Pass the right type to sizeof for the malloc
	Patch from Stanislav Brabec <sbrabec@suse.cz>

	Fixes #339055
	
2007-08-08  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in: Update version to 2.19.0 for release
	Don't pass arguments to AM_INIT_AUTOMAKE and AC_INIT both
	
2007-08-08  Rodney Dawes  <dobey.pwns@gmail.com>

	* .cvsignore: Remove all the now-unneeded .cvsignore files

	* *.make: Remove these included makefiles as they are autogenerated

	* Makefile.am: Add DISTCHECK_CONFIGURE_FLAGS
	Add CLEANFILES and DISTCLEANFILES
	Add gnome-doc-utils files to EXTRA_DIST
	Remove omf-install from SUBDIRS

	* autogen.sh: Require automake 1.7 and set up for gnome-doc-utils

	* configure.in: Update to use gnome-doc-utils
	Remove help/$lang/Makefile from AC_OUTPUT
	Remove omf-install from AC_OUTPUT

	* help/*/Makefile.am:
	* help/*/ghex2.xml:
	* help/*/ghex2-*.omf:
	* help/*/legal.xml:
	* help/*/topic.dat:
	* help/*/*.html:
	* help/*/*.png: